--- a/src/app/ui/shared/components/catalogo/boton-color/boton-color.component.html
+++ b/src/app/ui/shared/components/catalogo/boton-color/boton-color.component.html
@@ -1,5 +1,8 @@
 <button
 	class="btn-color"
+	[ngClass]="{'btn-color--seleccionado' : estaSeleccionado}"
 	[ngStyle]="{ 'background-color': color().extra }"
 	(click)="seleccionar()"
-></button>
+>
+
+</button>
