--- a/src/app/ui/shared/components/catalogo/boton-color/boton-color.component.scss
+++ b/src/app/ui/shared/components/catalogo/boton-color/boton-color.component.scss
@@ -1,10 +1,22 @@
 .btn-color {
     width: 30px;
     height: 30px;
+    display: flex;
+    position: relative;
 }
 
 .btn-color:hover {
     transition: all 0.3s;
     scale: 1.2;
     box-shadow: 0px 0px 1px 1px var(--color-base-10);
+}
+
+.btn-color--seleccionado::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    scale: 1.2;
+    border: 1px var(--color-primary-5) solid;
+    transition: all 0.3s;
 }
