--- a/src/app/ui/shared/components/catalogo/boton-talla/boton-talla.component.scss
+++ b/src/app/ui/shared/components/catalogo/boton-talla/boton-talla.component.scss
@@ -1,10 +1,15 @@
 .btn-talla {
-    border: 1px solid var(--color-secondary-5);
-    padding: var(--spaceXxs) var(--spaceXs);
-    min-width: 60px;
+	border: 1px solid var(--color-secondary-5);
+	padding: var(--spaceXxs) var(--spaceXs);
+	min-width: 60px;
 }
 
-.btn-talla:hover {
-    background-color: var(--color-secondary-7);
-    color: var(--color-inverse);
+.btn-talla:hover:not(.btn-talla--seleccionado) {
+	background-color: var(--color-secondary-3);
+    color: var(--color-base);
+}
+
+.btn-talla--seleccionado {
+	background-color: var(--color-secondary-7);
+	color: var(--color-inverse);
 }
